tests/ui/codegen/host_device_math.rx
//@ spec: RXS-0081
fn main() {
    let x = 1.0f32;
    x.sqrt(); //~ ERROR RX6006
}
